notification-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api-deployment
  labels:
    app: notification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-api
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
        - name: notification-api
          image: bespinian/notification-api:latest
          ports:
            - containerPort: 3000
