notification-ui-deployment-config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: notification-ui
  name: notification-ui
spec:
  resources:
    limits:
      cpu: "50m"
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: notification-ui
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        app: notification-ui
    spec:
      containers:
      - env:
        - name: notification
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: notification-ui-runtime
        imagePullPolicy: IfNotPresent
        name: notification-ui-runtime
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
    metadata:
      labels:
        app: notification-ui
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - notification-ui-runtime
        from:
          kind: ImageStreamTag
          name: 'notification-ui-runtime:latest'
