notification-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-ui-deployment
  labels:
    app: notification-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-ui
  template:
    metadata:
      labels:
        app: notification-ui
    spec:
      containers:
        - name: notification-ui
          image: bespinian/notification-ui:1.0.6
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "10m"
